fix: `"repository_selection"` response key is not a string, but an emum with the possible values: `"all"` or `"selected"` (#756)
* build(workaround): `"repository_selection"` response key is not a string, but an emum with the possible values: `"all"` or `"selected"`

* fix: `"repository_selection"` response key is not a string, but an emum with the possible values: `"all"` or `"selected"`
