# lib/endpoint/overrides/workarounds.js
@@ -1,5 +1,7 @@
 module.exports = workarounds;
 
+const { isObject, isArray } = require("lodash");
+
 const { getOperationId } = require("../../openapi");
 
 function workarounds(state) {
@@ -147,6 +149,29 @@ function workarounds(state) {
     if (/^\/legacy\//.test(path)) {
       route.operation.deprecated = true;
     }
+
+    // `"repository_selection"` key is a string that can have only one of two values
+    // https://github.com/octokit/routes/issues/755
+    if (path === "/app/installations") {
+      debugger;
+    }
+
+    if (route.operation.responses) {
+      Object.values(route.operation.responses).forEach((response) => {
+        if (!response.content) {
+          return;
+        }
+        Object.values(response.content).forEach((content) => {
+          valuesDeep(content.schema, (value) => {
+            if (!isObject(value)) return;
+
+            if ("repository_selection" in value) {
+              value.repository_selection.enum = ["all", "selected"];
+            }
+          });
+        });
+      });
+    }
   });
 }
 
@@ -287,4 +312,21 @@ function gistWorkarounds(route) {
       "application/json"
     ].schema.properties.files = gistBaseFiles;
   }
+}
+
+function valuesDeep(obj, iterator) {
+  if (isObject(obj)) {
+    return Object.values(obj).forEach((value) => {
+      iterator(value);
+      valuesDeep(value, iterator);
+    });
+  }
+  if (isArray(obj)) {
+    return obj.forEach((value) => {
+      iterator(value);
+      valuesDeep(value, iterator);
+    });
+  }
+
+  iterator(obj);
 }
