# openapi/ghe-2.18/operations/apps/get-user-installation.json
@@ -57,7 +57,10 @@
                   "site_admin": { "type": "boolean" }
                 }
               },
-              "repository_selection": { "type": "string" },
+              "repository_selection": {
+                "type": "string",
+                "enum": ["all", "selected"]
+              },
               "access_tokens_url": { "type": "string" },
               "repositories_url": { "type": "string" },
               "html_url": { "type": "string" },
